[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[dependencies]
anyhow = "1.0.25"
itertools = "0.8.2"
shrinkwraprs = "0.2.3"